--- a/.github/workflows/flake8.yml
+++ b/.github/workflows/flake8.yml
@@ -15,7 +15,13 @@ jobs:
       run: |
         python -m pip install --upgrade pip wheel setuptools
         pip install nbqa flake8
-    - name: Analysing the code with Flake8
+    - name: Analysing the Python code with Flake8
+      run: |
+        # stop the build if there are Python syntax errors or undefined names
+        flake8 *.py --count --select=E9,F63,F7,F82 --show-source --statistics
+        # exit-zero treats all errors as warnings. The GitHub editor is 127 chars wide
+        flake8 *.py --count --exit-zero --max-complexity=10 --max-line-length=127 --statistics
+    - name: Analysing the Jupyter Notebook code with Flake8
       run: |
         # stop the build if there are Python syntax errors or undefined names
         nbqa flake8 *.ipynb --count --select=E9,F63,F7,F82 --show-source --statistics
