--- a/.github/workflows/pylint.yml
+++ b/.github/workflows/pylint.yml
@@ -15,6 +15,9 @@ jobs:
       run: |
         python -m pip install --upgrade pip wheel setuptools
         pip install nbqa pylint
-    - name: Analysing the code with Pylint
+    - name: Analysing the Python code with Pylint
+      run: |
+        pylint *.ipynb
+    - name: Analysing the Jupyter Notebook code with Pylint
       run: |
         nbqa pylint *.ipynb
