--- a/.github/workflows/python.yml
+++ b/.github/workflows/python.yml
@@ -23,7 +23,7 @@ jobs:
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip wheel setuptools
-        pip install runipy
+        pip install -r requirements.txt
     - name: Run Parser
       run: python parser.py
     - name: Run CSV generator
