Fix pylint not checking py files

--- a/.github/workflows/pylint.yml
+++ b/.github/workflows/pylint.yml
@@ -18,7 +18,7 @@ jobs:
         pip install nbqa pylint
     - name: Analysing the Python code with Pylint
       run: |
-        pylint *.ipynb
+        pylint *.py
     - name: Analysing the Jupyter Notebook code with Pylint
       run: |
         nbqa pylint *.ipynb
