--- a/.github/workflows/pylint.yml
+++ b/.github/workflows/pylint.yml
@@ -16,6 +16,7 @@ jobs:
       run: |
         python -m pip install --upgrade pip wheel setuptools
         pip install nbqa pylint
+        pip install -r requirements.txt
     - name: Analysing the Python code with Pylint
       run: |
         pylint *.py
