--- a/.github/workflows/flake8.yml
+++ b/.github/workflows/flake8.yml
@@ -27,4 +27,4 @@ jobs:
         # stop the build if there are Python syntax errors or undefined names
         nbqa flake8 *.ipynb --count --select=E9,F63,F7,F82 --show-source --statistics
         # exit-zero treats all errors as warnings. The GitHub editor is 127 chars wide
-        nbqa flake8 *.ipynb --count --exit-zero --max-complexity=10 --max-line-length=127 --statistics
+        nbqa flake8 *.ipynb --count --exit-zero --max-complexity=10 --max-line-length=127 --statistics --ignore=E402
